<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/volverAtras2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5E6A5555"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/jojo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="sans-serif"
        android:text="@string/quiz_de_jojo_s"
        android:textAlignment="center"
        android:textColor="#D10000"
        android:textColorHint="#850404"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#90E8DEDE"
        android:text="@string/seleccione_tu_parte_favorita"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#90E8DEDE"
        android:prompt="@string/spinner_tittle"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/volverAtras2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />


    <Button
        android:id="@+id/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_seccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        app:layout_constraintTop_toBottomOf="@+id/spinner"/>

    <Button
        android:id="@+id/siguiente"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="#C9020000"
        android:fontFamily="@font/calibri"
        android:text="Partes"
        android:textAllCaps="false"
        android:textColor="#96ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/volverAtras2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volverAtras2"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/cualeres"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="#C9020000"
        android:fontFamily="@font/calibri"
        android:text="Jojos"
        android:textAllCaps="false"
        android:textColor="#96ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/volverAtras2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volverAtras2"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vuelta al mundo"
        app:layout_constraintBottom_toTopOf="@+id/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siguiente"
        app:layout_constraintVertical_bias="0.938" />
</androidx.constraintlayout.widget.ConstraintLayout>